Show "message/feedback-report" attachments inline
Display mail parts with Content-Type: message/feedback-report
(RFC 5965), as if it were text/plain.
Currently Evolution shows this as an attachment, I click Ctrl+U
to view the (whole) message source, and this is not very convenient.
Edited by Milan Crha