I#19 - Show "message/feedback-report" attachments inline

Closes https://gitlab.gnome.org/GNOME/evolution/issues/19